<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp"
    android:background="@color/tertiary"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:id="@+id/tvTitleBreakTaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:fontFamily="@font/poppins_semibold"
            android:letterSpacing="0.03"
            android:text="@string/break_taken"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvBreak"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:letterSpacing="0.03"
            tools:text="00:00"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleBreakTaken" />

        <TextView
            android:id="@+id/tvTitleOutTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:fontFamily="@font/poppins_semibold"
            android:letterSpacing="0.03"
            android:text="@string/out_time"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBreak" />

        <TextView
            android:id="@+id/tvOutTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:letterSpacing="0.03"
            tools:text="00:00"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleOutTime" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClose"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:letterSpacing="0.03"
            app:backgroundTint="@color/secondary"
            android:text="@string/close"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/tvOutTime"
            tools:layout_editor_absoluteX="50dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>