<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".ui.activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvTop"
                style="@style/CustomCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/secondary"
                app:cardElevation="0dp"
                app:strokeWidth="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp">

                    <TextView
                        android:id="@+id/tvAppName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:fontFamily="@font/poppins_bold"
                        android:letterSpacing="0.03"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="46sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iconMenu"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.2"
                        android:clickable="true"
                        android:contentDescription="@string/menu"
                        android:focusable="true"
                        android:src="@drawable/icon_menu"
                        app:layout_constraintBottom_toBottomOf="@+id/tvAppName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tvAppName" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvAppName">

                        <TextView
                            android:id="@+id/tvTitleInTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:fontFamily="@font/poppins_semibold"
                            android:letterSpacing="0.03"
                            android:text="@string/in_time"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/cvInTime"
                            android:layout_width="match_parent"
                            android:layout_height="86dp"
                            android:layout_marginTop="2dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:padding="10dp"
                            app:cardBackgroundColor="@color/secondary"
                            app:cardCornerRadius="30dp"
                            app:layout_constraintTop_toBottomOf="@id/tvTitleInTime"
                            app:rippleColor="#7AFFFFFF"
                            app:strokeColor="@color/white"
                            app:strokeWidth="2dp">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <TextView
                                    android:id="@+id/tvInTime"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginHorizontal="30dp"
                                    android:fontFamily="@font/poppins_semibold"
                                    android:letterSpacing="0.03"
                                    android:textColor="@color/white"
                                    android:textSize="46sp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toStartOf="@+id/iconArrow1"
                                    app:layout_constraintStart_toStartOf="parent"
                                    android:text="00:00" />

                                <ImageView
                                    android:id="@+id/iconArrow1"
                                    android:layout_width="26dp"
                                    android:layout_height="26dp"
                                    android:layout_marginEnd="20dp"
                                    android:layout_weight="0.2"
                                    android:contentDescription="@string/menu"
                                    android:src="@drawable/arrow"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />


                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </com.google.android.material.card.MaterialCardView>


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvTop">

                <TextView
                    android:id="@+id/tvTitleEffectiveHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:fontFamily="@font/poppins_semibold"
                    android:letterSpacing="0.03"
                    android:text="@string/effective_hours"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvEffectiveHours"
                    android:layout_width="match_parent"
                    android:layout_height="86dp"
                    android:layout_marginTop="2dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="10dp"
                    app:cardBackgroundColor="@color/tertiary"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintTop_toBottomOf="@id/tvTitleEffectiveHours"
                    app:rippleColor="#7AFFFFFF"
                    app:strokeWidth="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tvEffectiveHours"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="30dp"
                            android:fontFamily="@font/poppins_semibold"
                            android:letterSpacing="0.03"
                            android:textColor="@color/white"
                            android:textSize="46sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/iconArrow2"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="00:00" />

                        <ImageView
                            android:id="@+id/iconArrow2"
                            android:layout_width="26dp"
                            android:layout_height="26dp"
                            android:layout_marginEnd="20dp"
                            android:layout_weight="0.2"
                            android:contentDescription="@string/menu"
                            android:src="@drawable/arrow"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvTop">

                <TextView
                    android:id="@+id/tvTitleGrossHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:fontFamily="@font/poppins_semibold"
                    android:letterSpacing="0.03"
                    android:text="@string/gross_hours"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvGrossHours"
                    android:layout_width="match_parent"
                    android:layout_height="86dp"
                    android:layout_marginTop="2dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="10dp"
                    app:cardBackgroundColor="@color/tertiary"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintTop_toBottomOf="@id/tvTitleGrossHours"
                    app:rippleColor="#7AFFFFFF"
                    app:strokeWidth="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tvGrossHours"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="30dp"
                            android:fontFamily="@font/poppins_semibold"
                            android:letterSpacing="0.03"
                            android:textColor="@color/white"
                            android:textSize="46sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/iconArrow3"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="00:00" />

                        <ImageView
                            android:id="@+id/iconArrow3"
                            android:layout_width="26dp"
                            android:layout_height="26dp"
                            android:layout_marginEnd="20dp"
                            android:layout_weight="0.2"
                            android:contentDescription="@string/menu"
                            android:src="@drawable/arrow"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchPartialDay"
                style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:letterSpacing="0.03"
                android:text="@string/partial_day"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:thumbTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:trackDecorationTint="@color/tertiary"
                app:trackTint="@color/tertiary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCalculate"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:letterSpacing="0.03"
                android:text="@string/calculate"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>